stacksy/app/assets/stylesheets/styles.css.scss
@import 'bootstrap';

html, body {
  height: 100%;
}

.btn {
  text-align: left;
}

.btn-butter {
  background-color: #FFFF77;
  color: #4073FF;
}

.container-fluid, .row, .col-md-2, .col-md-8 {
  height: 100%;
}

.col-md-2, .col-md-8 {
  padding-top: 30px;
}

.col-md-2 {
  background-color: #C2DDFF;
}

header{
  margin-bottom: 50px;
}

#js-alert {
  margin-top: 20px;
  margin-bottom: 50px;
}

h1 {
  font-size: 100px;
  font-family: 'Pacifico', cursive;
  /*font-family: 'Lobster', cursive;*/
  /*font-family: 'Lobster Two', cursive;*/
  color: #FF6000;
}

h3 {
  color: #4073FF;
}

.col-md-8 {
  text-align: center;
  background-color: #DFF8EE;
}

.col-md-2 p {

  margin-top: 300px;
}

svg {
  fill: #AF6200;
}

.special {
  font-family: 'Libre Baskerville', serif;
}

